Fix issue with buttons disappearing off screen on mobile sidebar
Due to a 'feature' in Safari mobile, vh100% returns a value based on the navbar being overload over the page, so is incorrect and buttons go off the bottom of the page. Adding a margin brings them back

--- a/packages/css-framework/src/fragments/_sidebar.scss
+++ b/packages/css-framework/src/fragments/_sidebar.scss
@@ -18,6 +18,9 @@ body.has-sidebar {
   background: color(neutral, 600);
   color: color(neutral, white);
   z-index: 700;
+
+  // Mobile browsers include their navbar in the height so a bottom aligned element needs to be moved up
+  padding-bottom: 30px;
 }
 
 .rn-sidebar__nav {
